// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(LargeDemographicsBannerDisplay)>
    <LargeDemographicsBannerDisplay
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
    >
      <section
        className="demographics-banner large-demographics-banner orion-fusion-theme"
      >
        <div
          className="content"
        >
          <div
            className="row"
          >
            <h1
              className="person-name"
            />
            <div
              className="application-content"
            />
          </div>
          <div
            className="row"
          >
            <div
              className="person-details"
            >
              <DemographicsBannerValue
                key="age"
              >
                <span
                  className="value"
                >
                  <span
                    className="value-text"
                  />
                </span>
              </DemographicsBannerValue>
              <DemographicsBannerValue
                key="gender"
              >
                <span
                  className="value"
                >
                  <span
                    className="value-text"
                  />
                </span>
              </DemographicsBannerValue>
              <DemographicsBannerValue
                key="dob"
              >
                <span
                  className="value"
                >
                  <span
                    className="value-text"
                  />
                </span>
              </DemographicsBannerValue>
            </div>
            <div
              className="identifiers"
            />
          </div>
        </div>
      </section>
    </LargeDemographicsBannerDisplay>
  </InjectIntl(LargeDemographicsBannerDisplay)>
</ThemeContextProvider>
`;

exports[`renders large banner that contains all valid information 1`] = `
<LargeDemographicsBannerDisplay
  age="25 Years"
  applicationContent={
    <span
      className="risk-score"
    >
      5%
    </span>
  }
  avatar={
    Object {
      "alt": "Johnathon Doe",
      "color": "neutral",
      "hashValue": "alternative hash",
      "image": "",
      "initials": "JD",
      "isAriaHidden": true,
    }
  }
  dateOfBirth="May 9, 1993"
  dateOfBirthLabel="DOB"
  deceasedDateLabel="Deceased"
  gender="Male"
  gestationalAgeLabel="GA"
  identifiers={
    Object {
      "MRN": 12343,
      "REA": "3JSDA",
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  personName="Johnathon Doe"
  photo=""
  postMenstrualAgeLabel="PMA"
  preferredFirstName="John"
/>
`;
